compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__unexpected_labelled_arg.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "fn id(x) { x } fn y() { id(x: 4) }"
---
----- SOURCE CODE
fn id(x) { x } fn y() { id(x: 4) }

----- ERROR
error: Unexpected labelled argument
  ┌─ /src/one/two.gleam:1:28
  │
1 │ fn id(x) { x } fn y() { id(x: 4) }
  │                            ^^^^

This argument has been given a label but the function does
not expect any. Please remove the label `x`.
